--- a/booktime/main/templates/home.html
+++ b/booktime/main/templates/home.html
@@ -13,7 +13,7 @@
 
 <body>    
     <h1>Hello, world!</h1>    
-
+    <p>BookTime</p>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
     </script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
