--- a/booktime/main/templates/base.html
+++ b/booktime/main/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="{% static " css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <title>BookTime</title>
 </head>
 
@@ -23,15 +23,18 @@
                 <li class="nav-item {% if request.path == "/about-us/" %}active{% endif %}">
                     <a class="nav-link" href="/about-us/">About us</a>
                 </li>
+                <li class="nav-item {% if request.path == "/contact-us/" %}active{% endif %}">
+                    <a class="nav-link" href="/contact-us/">Contact us</a>
+                </li>
             </ul>
         </div>
     </nav>
     {% block content %}
     {% endblock content %}
 
-    <script src="{% static " js/jquery.min.js" %}"></script>
-    <script src="{% static " js/popper.min.js" %}"></script>
-    <script src="{% static " js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/jquery.min.js" %}"></script>
+    <script src="{% static "js/popper.min.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
     {% block js %}
     {% endblock js %}
 </body>
